# livewire

./: .env.example  .gitignore  Makefile  README.md  livewire-handbook.md  livewire-prompt-pack.md  pyproject.toml  run.py  worker.py
api/: auth.py  combat.py  crimes.py  deps.py  feed.py  gym.py  heat.py  items.py  jail.py  jobs.py  main.py  market.py
core/: combat.py  crimes.py  event_weights.py  exceptions.py  gym.py  heat.py  items.py  market.py  progression.py  regen.py  state.py
docs/: deploy.md
docs/superpowers/plans/: 2026-07-03-livewire-phase0.md  2026-07-03-livewire-phase1.md
docs/superpowers/specs/: 2026-07-03-livewire-phase0-design.md
jobs/: seed.py
models/: __init__.py  db.py  tables.py
ops/: livewire-api.service
tests/: conftest.py  test_auth.py  test_combat.py  test_crimes.py  test_events.py  test_gym.py  test_heat.py  test_items.py  test_jail.py  test_market.py  test_progression.py  test_regen.py  test_seed.py  test_state.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts
web/src/components/: ActivityFeed.tsx  Bars.tsx  BottomNav.tsx  HeatGauge.tsx
web/src/pages/: City.tsx  Crimes.tsx  Fight.tsx  Gym.tsx  Home.tsx  Login.tsx  Market.tsx
web/src/utils/: toasts.ts
web/tests/: auth-loop.spec.ts  smoke.spec.ts
