[project]
name = "livewire"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "pydantic",
    "passlib[bcrypt]",
    "apscheduler",
    "httpx",
    "python-dotenv",
    "itsdangerous",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["models*", "jobs*", "api*", "core*", "agents*", "llm*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
